<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ControlMacro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_informacion_rutas">informacion_rutas</string>
    <string name="title_activity_lista_rutas">lista_rutas</string>
    <string name="title_activity_tomar_lectura">Toma Lectura</string>
    <string name="title_activity_lista_informacion_rutas">AdaptadorInformacionRutas</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <string name="title_activity_form_buscar">Buscar</string>
    <string name="title_activity_form_redes_poste">Postes</string>
    <string name="Item1">Item1</string>
    <string name="Item2">Item2</string>
    <string name="Item3">Item3</string>
    <string name="Item4">Item4</string>
    <string name="Item5">Item5</string>
    <string name="Item6">Item6</string>
    <string name="Item7">Item7</string>
    <string name="title_activity_dialogo_confirmacion">Confirmacion</string>
    <string name="di_Lbl_Mensaje">Mensaje</string>
    <string name="di_Btn_Aceptar">Aceptar</string>
    <string name="title_activity_dialogo_informacion">DialogoInformacion</string>
    <string name="title_activity_dialog_single_input">DialogSingleInput</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dialog_confirm">Confirmacion</string>
    <string name="title_activity_dialog_new_usuario">DialogNewUsuario</string>
    <string name="title_activity_dialog_delete_usuario">DialogDeleteUsuario</string>
    <string name="title_activity_dialog_redes_equipos">Formato Redes Equipos</string>
    <string name="title_activity_dialog_redes_lineas">Formato Redes Lineas</string>
    <string name="title_activity_dialog_redes_luminarias">Formato Redes Luminarias</string>
    <string name="title_activity_dialog_redes_post">FORMATO REDES POSTE</string>
    <string name="title_activity_info_topologico">Topologico</string>
</resources>
