<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="100">

    <TextView
        android:id="@+id/sevenItem1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sevenItem2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sevenItem3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sevenItem4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item4"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sevenItem5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item5"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sevenItem6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item6"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sevenItem7"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item7"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>

